foreach(PROG moo_overlap)
  file(GLOB ${PROG}_SOURCES ${PROG}*.cc)
  add_executable(${PROG} ${${PROG}_SOURCES})
  target_link_libraries(${PROG} votca_moo ${BOOST_LIBRARIES})
  install(TARGETS ${PROG} RUNTIME DESTINATION bin)

  if(ENABLE_TESTING)
    add_test(${PROG}Help ${PROG} --help)
    set_tests_properties(${PROG}Help PROPERTIES LABELS "tools;moo;votca")
  endif(ENABLE_TESTING)
endforeach(PROG)
